Small spacing fix to content blockquote

--- a/core/static/roca/sass/roca.scss
+++ b/core/static/roca/sass/roca.scss
@@ -494,6 +494,10 @@ img {
 				border: none;
 			}
 		}
+
+		blockquote {
+			margin-top: 25px;
+		}
 	}
 
 	.map {
